syntax = "proto2";
package message;
option go_package = "initialthree/protocol/cs/message";

message backpackUse_toS {
    optional uint32 id      = 1;    // 物品ID
    optional int32  count   = 2;    // 数量
}

message backpackUse_toC {}
